--- a/assets/css/db-acf-ui.css
+++ b/assets/css/db-acf-ui.css
@@ -1,3 +1,4 @@
+/* Created by Digitale Bazen */
 .acf-flexible-content .layout.-highlight-closed {
   animation: highlightClosed 0.65s 0.1s ease-out;
 }
