--- a/assets/css/db-acf-ui.css
+++ b/assets/css/db-acf-ui.css
@@ -84,15 +84,20 @@
 .acf-flexible-content .layout:hover .acf-fc-layout-controls .acf-icon.-plus,
 .acf-flexible-content .layout:hover .acf-fc-layout-controls .acf-icon.-minus,
 .acf-flexible-content .layout:hover .acf-fc-layout-controls .acf-icon.-pencil-alt,
+.acf-flexible-content .layout:hover .acf-fc-layout-controls .acf-icon.-toggle-alt,
 .acf-flexible-content .layout.-hover .acf-fc-layout-controls .acf-icon.-plus,
 .acf-flexible-content .layout.-hover .acf-fc-layout-controls .acf-icon.-minus,
 .acf-flexible-content .layout.-hover .acf-fc-layout-controls .acf-icon.-pencil-alt,
+.acf-flexible-content .layout.-hover .acf-fc-layout-controls .acf-icon.-toggle-alt,
 .acf-flexible-content .layout:focus .acf-fc-layout-controls .acf-icon.-plus,
 .acf-flexible-content .layout:focus .acf-fc-layout-controls .acf-icon.-minus,
 .acf-flexible-content .layout:focus .acf-fc-layout-controls .acf-icon.-pencil-alt,
+.acf-flexible-content .layout:focus .acf-fc-layout-controls .acf-icon.-toggle-alt,
 .acf-flexible-content .layout.-focus .acf-fc-layout-controls .acf-icon.-plus,
 .acf-flexible-content .layout.-focus .acf-fc-layout-controls .acf-icon.-minus,
-.acf-flexible-content .layout.-focus .acf-fc-layout-controls .acf-icon.-pencil-alt {
+.acf-flexible-content .layout.-focus .acf-fc-layout-controls .acf-icon.-pencil-alt,
+.acf-flexible-content .layout.-focus .acf-fc-layout-controls .acf-icon.-toggle-alt
+{
   visibility: hidden;
 }
 
@@ -100,15 +105,19 @@
 .acf-flexible-content > .values > .layout:hover .acf-fc-layout-controls .acf-icon.-plus,
 .acf-flexible-content > .values > .layout:hover .acf-fc-layout-controls .acf-icon.-minus,
 .acf-flexible-content > .values > .layout:hover .acf-fc-layout-controls .acf-icon.-pencil-alt,
+.acf-flexible-content > .values > .layout:hover .acf-fc-layout-controls .acf-icon.-toggle-alt,
 .acf-flexible-content > .values > .layout.-hover .acf-fc-layout-controls .acf-icon.-plus,
 .acf-flexible-content > .values > .layout.-hover .acf-fc-layout-controls .acf-icon.-minus,
 .acf-flexible-content > .values > .layout.-hover .acf-fc-layout-controls .acf-icon.-pencil-alt,
+.acf-flexible-content > .values > .layout.-hover .acf-fc-layout-controls .acf-icon.-toggle-alt,
 .acf-flexible-content > .values > .layout:focus .acf-fc-layout-controls .acf-icon.-plus,
 .acf-flexible-content > .values > .layout:focus .acf-fc-layout-controls .acf-icon.-minus,
 .acf-flexible-content > .values > .layout:focus .acf-fc-layout-controls .acf-icon.-pencil-alt,
 .acf-flexible-content > .values > .layout.-focus .acf-fc-layout-controls .acf-icon.-plus,
 .acf-flexible-content > .values > .layout.-focus .acf-fc-layout-controls .acf-icon.-minus,
-.acf-flexible-content > .values > .layout.-focus .acf-fc-layout-controls .acf-icon.-pencil-alt {
+.acf-flexible-content > .values > .layout.-focus .acf-fc-layout-controls .acf-icon.-pencil-alt,
+.acf-flexible-content > .values > .layout.-focus .acf-fc-layout-controls .acf-icon.-toggle-alt
+{
   visibility: visible;
 }
 .acf-icon.-more-actions {display: none !important;}
@@ -298,11 +307,30 @@ body.acf-modal-open {
     mask-size: 1.3rem;
 }
 
+.acf-icon.-toggle-alt {
+    -webkit-mask-image: url("../images/icon-hidden-alt.svg");
+    mask-image: url("../images/icon-hidden-alt.svg");
+    background: #101828;
+    mask-repeat: no-repeat;
+    visibility: hidden;
+    mask-position: center;
+    mask-size: 1.3rem;
+}
+
+.acf-icon.-toggle-alt.disabled{
+    -webkit-mask-image: url("../images/icon-visible.svg");
+    mask-image: url("../images/icon-visible.svg");
+}
+
 .active-layout.-modal .acf-icon.-pencil-alt {display: none !important; visibility: hidden !important;}
+.active-layout.-modal .acf-icon.-toggle-alt {display: none !important; visibility: hidden !important;}
 .active-layout.-modal .acf-icon.-plus-alt  {display: none !important; visibility: hidden !important;}
 .active-layout.-modal .acf-icon.-duplicate-alt  {display: none !important; visibility: hidden !important;}
 .active-layout.-modal .acf-icon.-trash-alt  {display: none !important; visibility: hidden !important;}
 
 .acf-icon.-pencil::before {display: none;}
+.acf-icon.-toggle::before {display: none;}
+
 
 .layout.active-layout>.acf-fc-layout-actions-wrap .acf-icon.-pencil-alt{background: white;}
+.layout.active-layout>.acf-fc-layout-actions-wrap .acf-icon.-toggle-alt{background: white;}
